<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                tools:context=".ui.fragments.homeActivity.HomeFragment">

                <RelativeLayout
                    android:id="@+id/rl_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_10sdp">

                    <RelativeLayout
                        android:id="@+id/rl_from"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_from"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textSize="@dimen/_11sdp"
                            android:textColor="@color/black"/>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_origin"
                            android:layout_below="@+id/tv_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold"
                            android:focusable="false"
                            android:hint="@string/where_from"
                            android:textColor="@color/colorPrimaryDark"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_code_or"
                            android:layout_below="@+id/tv_from"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:textColor="@color/colorPrimary"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_to"
                        android:layout_below="@+id/rl_from"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:textSize="@dimen/_11sdp"
                            android:textColor="@color/black"/>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_destination"
                            android:layout_below="@+id/tv_to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold"
                            android:hint="@string/where_to"
                            android:focusable="false"
                            android:textColor="@color/colorPrimaryDark"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_code_ds"
                            android:layout_below="@+id/tv_to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:textColor="@color/colorPrimary"/>

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_date"
                    android:layout_below="@+id/rl_station"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_fly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fly_out"
                        android:textSize="@dimen/_11sdp"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_date"
                        android:layout_below="@+id/tv_fly"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_date"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_passenger"
                    android:layout_below="@+id/rl_date"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_passenger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passengers"
                        android:textSize="@dimen/_11sdp"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_passenger_value"
                        android:layout_below="@+id/tv_passenger"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adult_1_16_years"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>

                </RelativeLayout>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47sdp"
            android:padding="@dimen/_7sdp"
            android:background="@color/white">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/brn_go"
                android:text="@string/search_flights"
                android:textAllCaps="false"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/btn_gradient_yellow"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </RelativeLayout>

</layout>
