<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200">
       <androidx.core.widget.NestedScrollView
           android:id="@+id/tv_nsv"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginBottom="@dimen/_50sdp"
           android:fillViewport="true">
        <RelativeLayout

               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:padding="@dimen/_10sdp"
               tools:context=".ui.fragments.flightBookingActivity.PassengerFragment">

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_adults"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_15sdp"
                   android:text="@string/adults"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/black"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_16_years"
                   android:layout_below="@+id/tv_adults"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_12sdp"
                   android:text="@string/years_16"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/grey_700"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_adult_add"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_alignParentEnd="true"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_adult_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/_7sdp"
                   android:textColor="@color/colorPrimaryDark"
                   android:text="1"
                   android:textSize="@dimen/_17sdp"
                   android:layout_marginEnd="@dimen/_10sdp"
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_toStartOf="@+id/iv_adult_add"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_adult_remove"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_toStartOf="@+id/tv_adult_count"
                   app:srcCompat="@drawable/ic_remove"/>

               <View
                   android:id="@+id/vw0"
                   android:layout_below="@+id/tv_16_years"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/grey_400"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_teens"
                   android:layout_below="@+id/vw0"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_15sdp"
                   android:text="@string/teens"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/black"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_12_15_years"
                   android:layout_below="@+id/tv_teens"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_12sdp"
                   android:text="@string/years_12_15"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/grey_700"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_teens_add"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw0"
                   android:layout_marginTop="@dimen/_20sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_alignParentEnd="true"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_teens_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw0"
                   android:layout_marginTop="@dimen/_17sdp"
                   android:textColor="@color/colorPrimaryDark"
                   android:text="0"
                   android:textSize="@dimen/_17sdp"
                   android:layout_marginEnd="@dimen/_10sdp"
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_toStartOf="@+id/iv_teens_add"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_teens_remove"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw0"
                   android:layout_marginTop="@dimen/_20sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_toStartOf="@+id/tv_teens_count"
                   app:srcCompat="@drawable/ic_remove"/>

               <View
                   android:id="@+id/vw1"
                   android:layout_below="@+id/tv_12_15_years"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/grey_400"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_children"
                   android:layout_below="@+id/vw1"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_15sdp"
                   android:text="@string/children"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/black"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_2_11_years"
                   android:layout_below="@+id/tv_children"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_12sdp"
                   android:text="@string/years_2_11"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/grey_700"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_child_add"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw1"
                   android:layout_marginTop="@dimen/_20sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_alignParentEnd="true"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_child_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw1"
                   android:layout_marginTop="@dimen/_17sdp"
                   android:textColor="@color/colorPrimaryDark"
                   android:text="0"
                   android:textSize="@dimen/_17sdp"
                   android:layout_marginEnd="@dimen/_10sdp"
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_toStartOf="@+id/iv_teens_add"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_child_remove"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw1"
                   android:layout_marginTop="@dimen/_20sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_toStartOf="@+id/tv_teens_count"
                   app:srcCompat="@drawable/ic_remove"/>

               <View
                   android:id="@+id/vw2"
                   android:layout_below="@+id/tv_2_11_years"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/grey_400"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_infant"
                   android:layout_below="@+id/vw2"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_15sdp"
                   android:text="@string/infants"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/black"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_under_2"
                   android:layout_below="@+id/tv_infant"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/_12sdp"
                   android:text="@string/under_2"
                   android:layout_alignParentStart="true"
                   android:textColor="@color/grey_700"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_infsnt_add"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw2"
                   android:layout_marginTop="@dimen/_20sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_alignParentEnd="true"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tv_infant_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw2"
                   android:layout_marginTop="@dimen/_17sdp"
                   android:textColor="@color/colorPrimaryDark"
                   android:text="0"
                   android:textSize="@dimen/_17sdp"
                   android:layout_marginEnd="@dimen/_10sdp"
                   android:layout_marginStart="@dimen/_10sdp"
                   android:layout_toStartOf="@+id/iv_teens_add"
                   app:srcCompat="@drawable/ic_add"/>

               <androidx.appcompat.widget.AppCompatImageView
                   android:id="@+id/iv_infant_remove"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/vw2"
                   android:layout_marginTop="@dimen/_20sdp"
                   android:layout_centerHorizontal="true"
                   android:layout_toStartOf="@+id/tv_teens_count"
                   app:srcCompat="@drawable/ic_remove"/>

               <View
                   android:id="@+id/vw3"
                   android:layout_below="@+id/tv_under_2"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/grey_400"/>

           </RelativeLayout>
       </androidx.core.widget.NestedScrollView>

        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/_45sdp"
           android:background="@color/white"
           android:padding="@dimen/_7sdp"
           android:orientation="vertical"
           android:layout_alignParentBottom="true">

           <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/btn_confirm"
              android:text="@string/confirm"
              android:textAllCaps="false"
              android:padding="@dimen/_2sdp"
              android:background="@drawable/btn_gradient_yellow"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="@dimen/_14sdp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

       </LinearLayout>
    </RelativeLayout>

</layout>
